--- a/app/templates/configure/location.html
+++ b/app/templates/configure/location.html
@@ -82,7 +82,7 @@
                         <select class="item-select" name="item_select">
                             <option value="" selected>(Select item)</option>
                             {% for item in game_data.items %}
-                                {% if item not in current.items %}
+                                {% if item.id not in current.items %}
                                     <option value="{{ item.id }}">{{ item.name }}</option>
                                 {% endif %}
                             {% endfor %}
@@ -186,7 +186,7 @@
                 addItem(itemId, itemName);
             });
             console.log("number of items={{ current.items | length }}");
-            {% for item_at in current.items %}
+            {% for item_at in current.items.values() %}
                 console.log("name={{item_at.item.name}}");
                 addItem(
                     {{ item_at.item.id }},
